# updatable-rs

./: Cargo.toml  README.md
src/: lib.rs
updatable_derive/: Cargo.toml
updatable_derive/src/: lib.rs  parser.rs  printer.rs
updatable_derive/src/parser/: mod.rs  structatt.rs  updatefn.rs
updatable_trait/: Cargo.toml
updatable_trait/src/: lib.rs
