[package]
name = "updatable"
version = "0.1.0"
authors = ["Lukas Wölfer <lukas.woelfer@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
updatable_derive = {path="./updatable_derive"}
updatable_trait = {path="./updatable_trait"}

[workspace]
members = ["updatable_derive", "updatable_trait"]